# fishnet

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  COPYING.txt  Cargo.toml  Dockerfile  INSTALL.md  README.md  build.rs  docker-entrypoint.sh  fishnet.yaml
.github/workflows/: build.yml  docker.yml  release.yml
alpha/: README.md
alpha/src/: api.rs  assets.rs  configure.rs  systemd.rs
doc/: install.md  protocol.md
doc/openshift/: README.md  daemonset.yaml  deployment.yaml  project.yaml
scripts/: sccache-clang++  sccache-g++  sccache-g++.bat
src/: api.rs  assets.rs  configure.rs  frontend.rs  ipc.rs  logger.rs  main.rs  queue.rs  run.rs  stats.rs  stockfish.rs  systemd.rs  todo.rs  update.rs  util.rs
