[package]
name = "fishnet"
version = "2.6.11-dev" # pull, test, remove dev, update readme, publish, tag, bump dev, push
description = "Distributed Stockfish analysis for lichess.org"
repository = "https://github.com/lichess-org/fishnet"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["command-line-utilities", "games"]
keywords = ["chess", "lichess"]
rust-version = "1.64"
edition = "2021"
exclude = [
    "Stockfish/**/*.o",
    "Stockfish/**/*.s",
    "Stockfish/**/.depend",
    "Stockfish/**/*.nnue",
    "Fairy-Stockfish/**/*.o",
    "Fairy-Stockfish/**/*.s",
    "Fairy-Stockfish/**/.depend",
    "Fairy-Stockfish/**/*.nnue",
]

[profile.release]
strip = true

[dependencies]
arrayvec = "0.7"
atty = "0.2"
bitflags = "2"
clap = { version = "4", features = ["derive", "deprecated", "wrap_help"] }
configparser = "3"
xz2 = "0.1"
rand = "0.8"
reqwest = { version = "=0.11.18", features = ["json", "rustls-tls-manual-roots"], default-features = false }
rustls = "0.21" # will fail at runtime if mismatch with reqwest
self_update = { version = "0.36", features = ["rustls"], default-features = false }
serde = "1"
serde_json = "1"
serde_with = "3"
home = "0.5"
shakmaty = { version = "0.25", features = ["variant"] }
shell-escape = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal", "process", "io-util"], default-features = false }
url = "2"
serde_repr = "0.1"
webpki-roots = "0.23"
thousands = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"

[build-dependencies]
glob = "0.3"
xz2 = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
