[package]
name = "fishnet"
version = "2.9.1-dev" # pull, test, remove dev, publish, tag, bump dev, push
description = "Distributed Stockfish analysis for lichess.org"
repository = "https://github.com/lichess-org/fishnet"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["command-line-utilities", "games"]
keywords = ["chess", "lichess"]
rust-version = "1.70"
edition = "2021"
exclude = [
    "Stockfish/**/*.o",
    "Stockfish/**/*.s",
    "Stockfish/**/.depend",
    "Stockfish/**/*.nnue",
    "Fairy-Stockfish/**/*.o",
    "Fairy-Stockfish/**/*.s",
    "Fairy-Stockfish/**/.depend",
    "Fairy-Stockfish/**/*.nnue",
]

[profile.release]
strip = true
lto = true

[dependencies]
arrayvec = "0.7"
bitflags = "2"
clap = { version = "4", features = ["derive", "deprecated", "wrap_help"] }
configparser = "3"
fastrand = "2"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", branch = "master", features = ["json", "rustls-tls-manual-roots", "stream"], default-features = false }
rustls = "0.22" # will fail at runtime if mismatch with reqwest
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
home = "0.5"
shakmaty = { version = "0.26", features = ["variant"] }
shell-escape = "0.1"
tempfile = "3"
thread-priority = "0.16"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal", "process", "io-util"], default-features = false }
url = "2"
serde_repr = "0.1"
webpki-roots = "0.26"
xz2 = { version = "0.1", features = ["static"] }
ar = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }
semver = "1"
futures-util = "0.3"
self-replace = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"

[build-dependencies]
glob = "0.3"
xz2 = "0.1"
ar = "0.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
