[package]
name = "fishnet"
version = "2.9.3" # pull, test, remove dev, publish, tag, bump dev, push
description = "Distributed Stockfish analysis for lichess.org"
repository = "https://github.com/lichess-org/fishnet"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["command-line-utilities", "games"]
keywords = ["chess", "lichess"]
rust-version = "1.70"
edition = "2021"
exclude = [
    "Stockfish/**/*.o",
    "Stockfish/**/*.s",
    "Stockfish/**/.depend",
    "Stockfish/**/*.nnue",
    "Fairy-Stockfish/**/*.o",
    "Fairy-Stockfish/**/*.s",
    "Fairy-Stockfish/**/.depend",
    "Fairy-Stockfish/**/*.nnue",
]

[profile.release]
strip = true
lto = true

[dependencies]
arrayvec = "0.7"
bitflags = "2"
clap = { version = "4", features = ["derive", "deprecated", "wrap_help"] }
configparser = "3"
fastrand = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls-manual-roots", "stream", "http2"], default-features = false }
rustls = { version = "0.23", features = ["ring", "tls12", "logging"], default-features = false } # will fail at runtime if mismatch with reqwest
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
home = "0.5"
shakmaty = { version = "0.27", features = ["variant"] }
shell-escape = "0.1"
tempfile = "3"
thread-priority = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal", "process", "io-util"], default-features = false }
url = "2"
serde_repr = "0.1"
webpki-roots = "0.26"
ar = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
semver = "1"
futures-util = "0.3"
self-replace = "1"
zstd = { version = "0.13", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"

[build-dependencies]
glob = "0.3"
ar = "0.9"
zstd = { version = "0.13", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
